# void

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.cursor/rules/: build-install.mdc  commit-after-modification.mdc  cross-platform-code-and-deps.mdc
.cursor/skills/best-practices/: SKILL.md  rust-checklist.md
.cursor/skills/groom-dependencies/: SKILL.md
.cursor/skills/improve-tests/: SKILL.md
.cursor/skills/quality-agent/: SKILL.md
.cursor/skills/release/: SKILL.md
.cursor/skills/review-pr/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  connector_request.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/void-agent/: Cargo.toml
crates/void-agent/src/: hook.rs  lib.rs  prompt.rs  runner.rs  tools.rs
crates/void-calendar/: Cargo.toml
crates/void-calendar/src/: api.rs  channel.rs  connector.rs  error.rs  lib.rs
crates/void-calendar/src/api/: client.rs  mod.rs  tests.rs  types.rs
crates/void-calendar/src/connector/: connector_trait.rs  events.rs  mapping.rs  mod.rs  sync_ops.rs  tests.rs  types.rs
crates/void-cli/: Cargo.toml
crates/void-cli/src/: cli.rs  context.rs  main.rs  output.rs
crates/void-cli/src/commands/: accounts.rs  agent.rs  agent_inbox.rs  archive.rs  auth.rs  calendar.rs  channel_factory.rs  channels.rs  config.rs  connector_factory.rs  contacts.rs  doctor.rs  forward.rs  gdrive.rs  gmail.rs  googlenews.rs  hackernews.rs  hook.rs  inbox.rs  install.rs  kb.rs  linkedin.rs  messages.rs  mod.rs  mute.rs  pagination.rs  read.rs  reddit.rs  remote.rs  reply.rs  resolve.rs  search.rs  send.rs  setup.rs  slack.rs  status.rs  sync.rs  telegram.rs  whatsapp.rs
crates/void-cli/src/connectors/: calendar.rs  github.rs  gmail.rs  googlenews.rs  hackernews.rs  linkedin.rs  mod.rs  slack.rs  telegram.rs  whatsapp.rs
crates/void-cli/src/service/: reads.rs  writes.rs
crates/void-cli/tests/: read_paths.rs  read_paths_snapshots.rs
crates/void-core/: Cargo.toml
crates/void-core/src/: channel.rs  config.rs  connector.rs  db.rs  error.rs  hooks.rs  lib.rs  links.rs  log.rs  models.rs  progress.rs  sync.rs  test_fixtures.rs
crates/void-core/src/config/: connection.rs  ignore.rs  mod.rs  paths.rs  tests.rs  void_config.rs
crates/void-core/src/db/: conversations.rs  database_access.rs  directory.rs  events.rs  hook_logs.rs  messages.rs  mod.rs  mute_sync.rs  row.rs  schema.rs  search.rs  tests.rs
crates/void-core/src/db/messages/: archive.rs  inbox.rs  lookup.rs  mod.rs  read.rs  upsert.rs
crates/void-core/src/db/tests/: archive.rs  contacts.rs  crud.rs  dedup.rs  fixtures.rs  mod.rs  mute.rs  saved.rs  search.rs
crates/void-core/src/hooks/: execute.rs  hook_fs.rs  mod.rs  model.rs  placeholders.rs  tests.rs
crates/void-core/src/hooks/runner/: mod.rs  on_message.rs  schedule.rs
crates/void-core/src/models/: calendar.rs  connector.rs  contact.rs  conversation.rs  health.rs  message.rs  mod.rs  serde_ts.rs  tests.rs
crates/void-core/src/store/: mod.rs  proxy_files.rs  remote.rs
crates/void-core/src/store/remote/: cache.rs  fetch.rs  mod.rs  ssh.rs  tests.rs
crates/void-core/src/sync/: daemon.rs  engine.rs  lock.rs  mod.rs  tests.rs
crates/void-gdrive/: Cargo.toml
crates/void-gdrive/src/: api.rs  error.rs
crates/void-gdrive/src/api/: client.rs  mod.rs  tests.rs  types.rs  url.rs
crates/void-gmail/: Cargo.toml  google-credentials.json
crates/void-gmail/src/: api.rs  auth.rs  channel.rs  connector.rs  error.rs  lib.rs
crates/void-gmail/src/api/: client.rs  message.rs  mod.rs  tests.rs  types.rs
crates/void-gmail/src/connector/: api_methods.rs  compose.rs  connector_trait.rs  mod.rs  sync.rs  tests.rs
crates/void-googlenews/: Cargo.toml
crates/void-googlenews/src/: api.rs  error.rs
crates/void-googlenews/src/connector/: mod.rs  sync.rs
crates/void-googlenews/tests/: search_integration.rs
crates/void-hackernews/: Cargo.toml
crates/void-hackernews/src/: api.rs  error.rs
crates/void-hackernews/src/connector/: mod.rs  sync.rs
crates/void-kb/: Cargo.toml
crates/void-kb/src/: chunking.rs  db.rs  embedding.rs  lib.rs  models.rs  normalize.rs  schema.rs  search.rs  sync.rs
crates/void-kb/src/db/: chunks.rs  documents.rs  expiry.rs  mod.rs  search.rs  status.rs  sync_folders.rs  tests.rs
crates/void-kb/tests/: integration.rs
crates/void-linkedin/: Cargo.toml
crates/void-linkedin/src/: api.rs  error.rs
crates/void-linkedin/src/api/: client.rs  integration.rs  mod.rs  tests.rs  types.rs
crates/void-linkedin/src/connector/: extract.rs  media.rs  mod.rs  profiles.rs  send.rs  sync.rs  tests.rs
crates/void-reddit/: Cargo.toml
crates/void-reddit/src/: api.rs  error.rs
crates/void-reddit/src/connector/: mod.rs  sync.rs
crates/void-slack/: Cargo.toml
crates/void-slack/src/: api.rs  channel.rs  connector.rs  error.rs  lib.rs
crates/void-slack/src/api/: chat.rs  conversations.rs  mod.rs  tests.rs  transport.rs  types.rs
crates/void-slack/src/connector/: connector_trait.rs  mapping.rs  mod.rs  socket_mode.rs  sync.rs  tests.rs
crates/void-slack/src/manifest/: mod.rs  tests.rs
crates/void-telegram/: Cargo.toml
crates/void-telegram/src/: error.rs  lib.rs  session.rs
crates/void-telegram/src/connector/: connector_trait.rs  extract.rs  media.rs  mod.rs  send.rs  sync.rs  tests.rs
crates/void-whatsapp/: Cargo.toml
crates/void-whatsapp/src/: channel.rs  connector.rs  error.rs  lib.rs
crates/void-whatsapp/src/connector/: connector_trait.rs  extract.rs  media.rs  mod.rs  ops.rs  self_chat.rs  send.rs  sync.rs  tests.rs
crates/void-whatsapp/src/rpc/: path.rs  protocol.rs  server.rs  tests.rs
docs/: adding-a-connector.md  commands.md  configuration.md  connectors.md  graphify.md  testing.md
docs/assets/: demo.tape
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
scripts/: build-install.ps1  build-install.sh  check.ps1  check.sh  server-config.toml.example
(+55 files in other folders)
