[workspace]
resolver = "2"
members = [
    "crates/void-cli",
    "crates/void-core",
    "crates/void-slack",
    "crates/void-gmail",
    "crates/void-calendar",
    "crates/void-whatsapp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async trait
async-trait = "0.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio-util = "0.7"
tabled = "0.17"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"

# Internal crates
void-core = { path = "crates/void-core" }
void-slack = { path = "crates/void-slack" }
void-gmail = { path = "crates/void-gmail" }
void-calendar = { path = "crates/void-calendar" }
void-whatsapp = { path = "crates/void-whatsapp" }
