[package]
name = "void-gdrive"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Google Drive/Docs/Sheets/Slides file downloader for Void CLI"

[dependencies]
void-gmail = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
