[package]
name = "void-gmail"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Gmail adapter for Void CLI"

[dependencies]
void-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }
base64 = { workspace = true }
html-to-markdown-rs = { workspace = true }
open = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
