[package]
name = "void-linkedin"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "LinkedIn adapter for Void CLI (via Unipile API)"

[dependencies]
void-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
