[package]
name = "void-reddit"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Reddit adapter for Void CLI"

[dependencies]
void-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
