[package]
name = "void-whatsapp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "WhatsApp adapter for Void CLI"

[dependencies]
void-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
